feat(): refactor gatitos crud

--- a/CrudGatitos/Views/Gatitos/Delete.cshtml
+++ b/CrudGatitos/Views/Gatitos/Delete.cshtml
@@ -42,7 +42,8 @@
                    <input asp-for="Colores" class="form-control" disabled/>
                </div>
                <div class="form-group">
-                   <input type="submit" value="Eliminar Gatito" class="btn btn-primary" />
+                   <input type="submit" value="Eliminar Gatito" class="btn" style="background-color:#F5B041 ;" />
+                   <a asp-controller="Gatitos" asp-action="Index" class="btn btn-danger">Cancelar</a>
                </div>
            </form>
        </div>
