--- a/CrudGatitos/Views/Gatitos/Create.cshtml
+++ b/CrudGatitos/Views/Gatitos/Create.cshtml
@@ -29,18 +29,23 @@
                </div>
                <div class="form-group">
                    <label asp-for="Peso" class="control-label"></label>
-                   <input asp-for="Peso" class="form-control" />
+                   <input type="number" asp-for="Peso" class="form-control" />
                </div>
                <div class="form-group">
                    <label asp-for="Edad" class="control-label"></label>
-                   <input asp-for="Edad" class="form-control" />
+                   <input type="number" asp-for="Edad" class="form-control" />
                </div>
                <div class="form-group">
                    <label asp-for="Colores" class="control-label"></label>
                    <input asp-for="Colores" class="form-control" />
                </div>
                <div class="form-group">
-                   <input type="submit" value="Registrar Gatito" class="btn btn-primary" />
+                   <label asp-for="Imagen" class="control-label"></label>
+                   <input asp-for="Imagen" class="form-control" />
+               </div>
+               <div class="form-group">
+                   <input type="submit" value="Registrar Gatito" class="btn" style="background-color:#F5B041 ;"/>
+                   <a asp-controller="Gatitos" asp-action="Index" class="btn btn-danger">Cancelar</a>
                </div>
            </form>
        </div>
